FEAR.Lang/Lang/GFEARParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from d:/Source/Repos/Research/FEAR/FEAR.Core/GFEARParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace FEAR {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class GFEARParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		Break=1, Else=2, Var=3, Return=4, Void=5, Continue=6, For=7, Foreach=8, 
		While=9, With=10, Create=11, Collection=12, Append=13, Function_=14, If=15, 
		In=16, To=17, As=18, Of=19, New=20, EndL=21, EndB=22, Iri=23, Segment=24, 
		Define=25, Internal=26, Interpreter_=27, Collector=28, Codifier=29, Module=30, 
		Codify=31, Ontology=32, Entity=33, Property=34, Include=35, Identified=36, 
		By=37, Prefix_=38, Accepts=39, Search=40, Result=41, Required=42, Optional=43, 
		InterpreterSkip=44, OpenBracket=45, CloseBracket=46, OpenParen=47, CloseParen=48, 
		OpenBrace=49, CloseBrace=50, SemiColon=51, Comma=52, Assign=53, QuestionMark=54, 
		Colon=55, Dot=56, PlusPlus=57, MinusMinus=58, Plus=59, Minus=60, BitNot=61, 
		Not=62, Multiply=63, Divide=64, Modulus=65, LessThan=66, MoreThan=67, 
		LessThanEquals=68, GreaterThanEquals=69, Equals_=70, NotEquals=71, RightShiftArithmetic=72, 
		LeftShiftArithmetic=73, BitAnd=74, BitXOr=75, BitOr=76, And=77, Or=78, 
		Arrow=79, ColonColon=80, NULL_LITERAL=81, DECIMAL_LITERAL=82, HEX_LITERAL=83, 
		OCT_LITERAL=84, BINARY_LITERAL=85, FLOAT_LITERAL=86, HEX_FLOAT_LITERAL=87, 
		BOOL_LITERAL=88, CHAR_LITERAL=89, STRING_LITERAL=90, Whitespace=91, MultiLineComment=92, 
		SingleLineComment=93, Newline=94, UnexpectedCharacter=95, IDENTIFIER=96;
	public const int
		RULE_program = 0, RULE_entityUri = 1, RULE_literal = 2, RULE_integerLiteral = 3, 
		RULE_floatLiteral = 4, RULE_identifiedByEntityClause = 5, RULE_identifiedByPropertyClause = 6, 
		RULE_identifiedByClause = 7, RULE_identifiedByClauseBlock = 8, RULE_resultEntityBlock = 9, 
		RULE_block = 10, RULE_blockStatement = 11, RULE_identifier = 12, RULE_createPropertyCollectionStatement = 13, 
		RULE_createPropertyValueStatement = 14, RULE_createPropertyRelationshipStatement = 15, 
		RULE_createPropertyRelationshipUriStatement = 16, RULE_createPropertyEntityStatement = 17, 
		RULE_createPropertyStatement = 18, RULE_createCollectionStatement = 19, 
		RULE_createEntityStatement = 20, RULE_appendEntityStatement = 21, RULE_appendPropertyValueStatement = 22, 
		RULE_appendPropertyRelationshipStatement = 23, RULE_acceptsStatement = 24, 
		RULE_includeStatement = 25, RULE_prefixStatement = 26, RULE_codifierDefinitionBlock = 27, 
		RULE_codifierDefinitionStatement = 28, RULE_iriFormatClause = 29, RULE_ontologyStatement = 30, 
		RULE_ontologyPrefixStatement = 31, RULE_statement = 32, RULE_foreachControl = 33, 
		RULE_parExpression = 34, RULE_expression = 35, RULE_primary = 36;
	public static readonly string[] ruleNames = {
		"program", "entityUri", "literal", "integerLiteral", "floatLiteral", "identifiedByEntityClause", 
		"identifiedByPropertyClause", "identifiedByClause", "identifiedByClauseBlock", 
		"resultEntityBlock", "block", "blockStatement", "identifier", "createPropertyCollectionStatement", 
		"createPropertyValueStatement", "createPropertyRelationshipStatement", 
		"createPropertyRelationshipUriStatement", "createPropertyEntityStatement", 
		"createPropertyStatement", "createCollectionStatement", "createEntityStatement", 
		"appendEntityStatement", "appendPropertyValueStatement", "appendPropertyRelationshipStatement", 
		"acceptsStatement", "includeStatement", "prefixStatement", "codifierDefinitionBlock", 
		"codifierDefinitionStatement", "iriFormatClause", "ontologyStatement", 
		"ontologyPrefixStatement", "statement", "foreachControl", "parExpression", 
		"expression", "primary"
	};

	private static readonly string[] _LiteralNames = {
		null, "'break'", "'else'", "'var'", "'return'", "'void'", "'continue'", 
		"'for'", "'foreach'", "'while'", "'with'", "'create'", "'collection'", 
		"'append'", "'function'", "'if'", "'in'", "'to'", "'as'", "'of'", "'new'", 
		"'L'", "'B'", "'iri'", "'segment'", "'define'", "'internal'", "'interpreter'", 
		"'collector'", "'codifier'", "'module'", "'codify'", "'ontology'", "'entity'", 
		"'property'", "'include'", "'identified'", "'by'", "'prefix'", "'accepts'", 
		"'search'", "'result'", "'required'", "'optional'", "'S'", "'['", "']'", 
		"'('", "')'", "'{'", "'}'", "';'", "','", "'='", "'?'", "':'", "'.'", 
		"'++'", "'--'", "'+'", "'-'", "'~'", "'!'", "'*'", "'/'", "'%'", "'<'", 
		"'>'", "'<='", "'>='", "'=='", "'!='", "'>>'", "'<<'", "'&'", "'^'", "'|'", 
		"'&&'", "'||'", "'=>'", "'::'", "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Break", "Else", "Var", "Return", "Void", "Continue", "For", "Foreach", 
		"While", "With", "Create", "Collection", "Append", "Function_", "If", 
		"In", "To", "As", "Of", "New", "EndL", "EndB", "Iri", "Segment", "Define", 
		"Internal", "Interpreter_", "Collector", "Codifier", "Module", "Codify", 
		"Ontology", "Entity", "Property", "Include", "Identified", "By", "Prefix_", 
		"Accepts", "Search", "Result", "Required", "Optional", "InterpreterSkip", 
		"OpenBracket", "CloseBracket", "OpenParen", "CloseParen", "OpenBrace", 
		"CloseBrace", "SemiColon", "Comma", "Assign", "QuestionMark", "Colon", 
		"Dot", "PlusPlus", "MinusMinus", "Plus", "Minus", "BitNot", "Not", "Multiply", 
		"Divide", "Modulus", "LessThan", "MoreThan", "LessThanEquals", "GreaterThanEquals", 
		"Equals_", "NotEquals", "RightShiftArithmetic", "LeftShiftArithmetic", 
		"BitAnd", "BitXOr", "BitOr", "And", "Or", "Arrow", "ColonColon", "NULL_LITERAL", 
		"DECIMAL_LITERAL", "HEX_LITERAL", "OCT_LITERAL", "BINARY_LITERAL", "FLOAT_LITERAL", 
		"HEX_FLOAT_LITERAL", "BOOL_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", 
		"Whitespace", "MultiLineComment", "SingleLineComment", "Newline", "UnexpectedCharacter", 
		"IDENTIFIER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GFEARParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GFEARParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GFEARParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GFEARParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CodifierDefinitionBlockContext codifierDefinitionBlock() {
			return GetRuleContext<CodifierDefinitionBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ResultEntityBlockContext resultEntityBlock() {
			return GetRuleContext<ResultEntityBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(GFEARParser.Eof, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGFEARParserVisitor<TResult> typedVisitor = visitor as IGFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			codifierDefinitionBlock();
			State = 75;
			resultEntityBlock();
			State = 76;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntityUriContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(GFEARParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(GFEARParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Colon() { return GetToken(GFEARParser.Colon, 0); }
		public EntityUriContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entityUri; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGFEARParserVisitor<TResult> typedVisitor = visitor as IGFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntityUri(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntityUriContext entityUri() {
		EntityUriContext _localctx = new EntityUriContext(Context, State);
		EnterRule(_localctx, 2, RULE_entityUri);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			Match(IDENTIFIER);
			State = 79;
			Match(Colon);
			State = 80;
			Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LiteralContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IntegerLiteralContext integerLiteral() {
			return GetRuleContext<IntegerLiteralContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FloatLiteralContext floatLiteral() {
			return GetRuleContext<FloatLiteralContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CHAR_LITERAL() { return GetToken(GFEARParser.CHAR_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LITERAL() { return GetToken(GFEARParser.STRING_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOL_LITERAL() { return GetToken(GFEARParser.BOOL_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NULL_LITERAL() { return GetToken(GFEARParser.NULL_LITERAL, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_literal; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGFEARParserVisitor<TResult> typedVisitor = visitor as IGFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLiteral(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LiteralContext literal() {
		LiteralContext _localctx = new LiteralContext(Context, State);
		EnterRule(_localctx, 4, RULE_literal);
		try {
			State = 88;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case DECIMAL_LITERAL:
			case HEX_LITERAL:
			case OCT_LITERAL:
			case BINARY_LITERAL:
				EnterOuterAlt(_localctx, 1);
				{
				State = 82;
				integerLiteral();
				}
				break;
			case FLOAT_LITERAL:
			case HEX_FLOAT_LITERAL:
				EnterOuterAlt(_localctx, 2);
				{
				State = 83;
				floatLiteral();
				}
				break;
			case CHAR_LITERAL:
				EnterOuterAlt(_localctx, 3);
				{
				State = 84;
				Match(CHAR_LITERAL);
				}
				break;
			case STRING_LITERAL:
				EnterOuterAlt(_localctx, 4);
				{
				State = 85;
				Match(STRING_LITERAL);
				}
				break;
			case BOOL_LITERAL:
				EnterOuterAlt(_localctx, 5);
				{
				State = 86;
				Match(BOOL_LITERAL);
				}
				break;
			case NULL_LITERAL:
				EnterOuterAlt(_localctx, 6);
				{
				State = 87;
				Match(NULL_LITERAL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IntegerLiteralContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DECIMAL_LITERAL() { return GetToken(GFEARParser.DECIMAL_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HEX_LITERAL() { return GetToken(GFEARParser.HEX_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OCT_LITERAL() { return GetToken(GFEARParser.OCT_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BINARY_LITERAL() { return GetToken(GFEARParser.BINARY_LITERAL, 0); }
		public IntegerLiteralContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_integerLiteral; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGFEARParserVisitor<TResult> typedVisitor = visitor as IGFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIntegerLiteral(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IntegerLiteralContext integerLiteral() {
		IntegerLiteralContext _localctx = new IntegerLiteralContext(Context, State);
		EnterRule(_localctx, 6, RULE_integerLiteral);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			_la = TokenStream.LA(1);
			if ( !(((((_la - 82)) & ~0x3f) == 0 && ((1L << (_la - 82)) & 15L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FloatLiteralContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FLOAT_LITERAL() { return GetToken(GFEARParser.FLOAT_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HEX_FLOAT_LITERAL() { return GetToken(GFEARParser.HEX_FLOAT_LITERAL, 0); }
		public FloatLiteralContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_floatLiteral; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGFEARParserVisitor<TResult> typedVisitor = visitor as IGFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFloatLiteral(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FloatLiteralContext floatLiteral() {
		FloatLiteralContext _localctx = new FloatLiteralContext(Context, State);
		EnterRule(_localctx, 8, RULE_floatLiteral);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			_la = TokenStream.LA(1);
			if ( !(_la==FLOAT_LITERAL || _la==HEX_FLOAT_LITERAL) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentifiedByEntityClauseContext : ParserRuleContext {
		public IToken condition;
		public EntityUriContext propertyUri;
		public IToken entityName;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Entity() { return GetToken(GFEARParser.Entity, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public EntityUriContext entityUri() {
			return GetRuleContext<EntityUriContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(GFEARParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Required() { return GetToken(GFEARParser.Required, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Optional() { return GetToken(GFEARParser.Optional, 0); }
		public IdentifiedByEntityClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identifiedByEntityClause; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGFEARParserVisitor<TResult> typedVisitor = visitor as IGFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifiedByEntityClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdentifiedByEntityClauseContext identifiedByEntityClause() {
		IdentifiedByEntityClauseContext _localctx = new IdentifiedByEntityClauseContext(Context, State);
		EnterRule(_localctx, 10, RULE_identifiedByEntityClause);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94;
			_localctx.condition = TokenStream.LT(1);
			_la = TokenStream.LA(1);
			if ( !(_la==Required || _la==Optional) ) {
				_localctx.condition = ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 95;
			Match(Entity);
			State = 96;
			_localctx.propertyUri = entityUri();
			State = 97;
			_localctx.entityName = Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentifiedByPropertyClauseContext : ParserRuleContext {
		public IToken condition;
		public EntityUriContext propertyUri;
		[System.Diagnostics.DebuggerNonUserCode] public EntityUriContext entityUri() {
			return GetRuleContext<EntityUriContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Required() { return GetToken(GFEARParser.Required, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Optional() { return GetToken(GFEARParser.Optional, 0); }
		public IdentifiedByPropertyClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identifiedByPropertyClause; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGFEARParserVisitor<TResult> typedVisitor = visitor as IGFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifiedByPropertyClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdentifiedByPropertyClauseContext identifiedByPropertyClause() {
		IdentifiedByPropertyClauseContext _localctx = new IdentifiedByPropertyClauseContext(Context, State);
		EnterRule(_localctx, 12, RULE_identifiedByPropertyClause);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			_localctx.condition = TokenStream.LT(1);
			_la = TokenStream.LA(1);
			if ( !(_la==Required || _la==Optional) ) {
				_localctx.condition = ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 100;
			_localctx.propertyUri = entityUri();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentifiedByClauseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifiedByEntityClauseContext identifiedByEntityClause() {
			return GetRuleContext<IdentifiedByEntityClauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentifiedByPropertyClauseContext identifiedByPropertyClause() {
			return GetRuleContext<IdentifiedByPropertyClauseContext>(0);
		}
		public IdentifiedByClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identifiedByClause; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGFEARParserVisitor<TResult> typedVisitor = visitor as IGFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifiedByClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdentifiedByClauseContext identifiedByClause() {
		IdentifiedByClauseContext _localctx = new IdentifiedByClauseContext(Context, State);
		EnterRule(_localctx, 14, RULE_identifiedByClause);
		try {
			State = 104;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 102;
				identifiedByEntityClause();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 103;
				identifiedByPropertyClause();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentifiedByClauseBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identified() { return GetToken(GFEARParser.Identified, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode By() { return GetToken(GFEARParser.By, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdentifiedByClauseContext[] identifiedByClause() {
			return GetRuleContexts<IdentifiedByClauseContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentifiedByClauseContext identifiedByClause(int i) {
			return GetRuleContext<IdentifiedByClauseContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(GFEARParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(GFEARParser.Comma, i);
		}
		public IdentifiedByClauseBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identifiedByClauseBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGFEARParserVisitor<TResult> typedVisitor = visitor as IGFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifiedByClauseBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdentifiedByClauseBlockContext identifiedByClauseBlock() {
		IdentifiedByClauseBlockContext _localctx = new IdentifiedByClauseBlockContext(Context, State);
		EnterRule(_localctx, 16, RULE_identifiedByClauseBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			Match(Identified);
			State = 107;
			Match(By);
			State = 108;
			identifiedByClause();
			State = 113;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 109;
				Match(Comma);
				State = 110;
				identifiedByClause();
				}
				}
				State = 115;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
